--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "laravel/sail": "^1.26",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
-        "phpunit/phpunit": "^11.0.1"
+        "phpunit/phpunit": "^11.0.1",
+        "squizlabs/php_codesniffer": "^3.10",
+        "tightenco/duster": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -48,7 +50,8 @@
             "@php artisan key:generate --ansi",
             "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
             "@php artisan migrate --graceful --ansi"
-        ]
+        ],
+        "phpcs": "phpcs"
     },
     "extra": {
         "laravel": {
