--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
-        "date-fns": "^3.6.0"
+        "date-fns": "^3.6.0",
+        "i18next": "^23.11.5",
+        "i18next-browser-languagedetector": "^8.0.0",
+        "i18next-http-backend": "^2.5.2",
+        "react-i18next": "^14.1.2"
     }
 }
