--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "i18next": "^23.11.5",
         "i18next-browser-languagedetector": "^8.0.0",
         "i18next-http-backend": "^2.5.2",
+        "react-bootstrap": "^2.10.3",
         "react-i18next": "^14.1.2"
     }
 }
