--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,7 @@
 name: Fix Code Style
- 
+
 on: [push]
- 
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -9,25 +9,63 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.3]
- 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
- 
+
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
           extensions: json, dom, curl, libxml, mbstring
           coverage: none
- 
+
       - name: Install Pint
         run: composer global require laravel/pint
- 
+
       - name: Run Pint
         run: pint
- 
+
       - name: Commit linted files
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Fixes coding style"
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.3"
+          extensions: mbstring, xml, sqlite3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "20"
+
+      - name: Install npm and composer dependencies
+        run: make install
+
+      - name: Copy .env.example to .env
+        run: cp .env.example .env
+
+      - name: Add database path to .env
+        run: echo 'DB_DATABASE=/home/runner/work/hexletProject/hexletProject/database/database.sqlite' >> .env
+
+      - name: Generate application key
+        run: php artisan key:generate
+
+      - name: Run migrations
+        run: php artisan migrate
+
+      - name: Run build
+        run: make build
+
+      - name: Run tests
+        run: make test
