--- a/.github/workflows/lint-test-deploy.yml
+++ b/.github/workflows/lint-test-deploy.yml
@@ -92,7 +92,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/user-crud-app:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/laravel-project-manager:latest
   deploy:
     runs-on: ubuntu-latest
     needs: build_and_push
