--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "sentry/sentry-laravel": "^4.6",
+        "spatie/laravel-model-states": "^2.7",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
